everything/gitops/apps/piano/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: piano-frontend
  namespace: piano
  labels:
    app: piano-frontend
spec:
  type: ClusterIP
  selector:
    app: piano-frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
