everything/gitops/apps/piano/frontend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: piano-frontend
  namespace: piano
spec:
  ingressClassName: traefik
  rules:
    - host: piano.i-tems.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: piano-frontend
                port:
                  number: 80
